[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"
authors = ["Ibuki Shinzato<e235718@ie.u-ryukyu.ac.jp>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "blog_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
volatile = "0.2.6"
